@@ -1523,7 +1523,7 @@ int igraph_closeness_estimate_weighted(const igraph_t *graph,
   long int no_of_nodes=igraph_vcount(graph);
   long int no_of_edges=igraph_ecount(graph);
   
-  igraph_indheap_t Q;
+  igraph_2wheap_t Q;
   igraph_vit_t vit;
   long int nodes_to_calc;
   
@@ -1547,8 +1547,8 @@ int igraph_closeness_estimate_weighted(const igraph_t *graph,
   
   nodes_to_calc=IGRAPH_VIT_SIZE(vit);
   
-  IGRAPH_CHECK(igraph_indheap_init(&Q, no_of_nodes));
-  IGRAPH_FINALLY(igraph_indheap_destroy, &Q);
+  IGRAPH_CHECK(igraph_2wheap_init(&Q, no_of_nodes));
+  IGRAPH_FINALLY(igraph_2wheap_destroy, &Q);
   IGRAPH_CHECK(igraph_lazy_adjedgelist_init(graph, &adjlist, mode));
   IGRAPH_FINALLY(igraph_lazy_adjedgelist_destroy, &adjlist);
 
@@ -1562,15 +1562,15 @@ int igraph_closeness_estimate_weighted(const igraph_t *graph,
   for (i=0; !IGRAPH_VIT_END(vit); IGRAPH_VIT_NEXT(vit), i++) {
     
     long int source=IGRAPH_VIT_GET(vit);
-    igraph_indheap_clear(&Q);
-    igraph_indheap_push_with_index(&Q, source, 0);
+    igraph_2wheap_clear(&Q);
+    igraph_2wheap_push_with_index(&Q, source, 0);
     VECTOR(which)[source]=i+1;
     VECTOR(dist)[source]=0.0;
     nodes_reached=0;
     
-    while (!igraph_indheap_empty(&Q)) {
-      long int minnei=igraph_indheap_max_index(&Q);
-      igraph_real_t mindist=-igraph_indheap_delete_max(&Q);
+    while (!igraph_2wheap_empty(&Q)) {
+      long int minnei=igraph_2wheap_max_index(&Q);
+      igraph_real_t mindist=-igraph_2wheap_delete_max(&Q);
       
       /* Now check all neighbors of minnei for a shorter path */
       igraph_vector_t *neis=igraph_lazy_adjedgelist_get(&adjlist, minnei);
@@ -1590,15 +1590,15 @@ int igraph_closeness_estimate_weighted(const igraph_t *graph,
 	  /* First non-infinite distance */
 	  VECTOR(which)[to]=i+1;
 	  VECTOR(dist)[to]=altdist;
-	  IGRAPH_CHECK(igraph_indheap_push_with_index(&Q, to, -altdist));
+	  IGRAPH_CHECK(igraph_2wheap_push_with_index(&Q, to, -altdist));
 	} else if (altdist < curdist) {
 	  /* This is a shorter path */
 	  VECTOR(dist)[to]=altdist;
-	  IGRAPH_CHECK(igraph_indheap_modify(&Q, to, -altdist));
+	  IGRAPH_CHECK(igraph_2wheap_modify(&Q, to, -altdist));
 	}
       }
 
-    } /* !igraph_indheap_empty(&Q) */
+    } /* !igraph_2wheap_empty(&Q) */
 
     VECTOR(*res)[i] += ((igraph_integer_t)no_of_nodes * (no_of_nodes-nodes_reached));
     VECTOR(*res)[i] = (no_of_nodes-1) / VECTOR(*res)[i];
@@ -1608,7 +1608,7 @@ int igraph_closeness_estimate_weighted(const igraph_t *graph,
   igraph_vector_long_destroy(&which);
   igraph_vector_destroy(&dist);
   igraph_lazy_adjedgelist_destroy(&adjlist);
-  igraph_indheap_destroy(&Q);
+  igraph_2wheap_destroy(&Q);
   igraph_vit_destroy(&vit);
   IGRAPH_FINALLY_CLEAN(5);
 
