@@ -1,5 +1,8 @@
 2008-11-04  Gabor Csardi  <csardi@szaffi>
 
+	* src/centrality.c (igraph_closeness_estimate_weighted) : 
+	use the two-way heap
+
 	* src/centrality.c (igraph_betweenness_estimate_weighted) : 
 	use the two-way heap
 
